--- a/css/normalize.css
+++ b/css/normalize.css
@@ -10,7 +10,7 @@
 
 html {
   /* font-size: 16px */
-  line-height: 1.15; /* 1 */
+  line-height: 1.5; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
@@ -41,6 +41,10 @@ main {
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
+}
+
+h2 {
+  font-size: 1em;
 }
 
 /* Grouping content
